src/css/index.css
@import url('https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap');

:root {
    /* primary colors */
    --primary-purple-600: hsl(238, 40%, 52%);
    --primary-pink-400: hsl(358, 79%, 66%);
    --primary-purple-200: hsl(239, 57%, 85%);
    --primary-pink-200: hsl(357, 100%, 86%);

    /* neutral colors */
    --neutral-grey-800: hsl(212, 24%, 26%);
    --neutral-grey-500: hsl(211, 10%, 45%);
    --neutral-grey-100: hsl(223, 19%, 93%);
    --neutral-grey-50: hsl(228, 33%, 97%);
    --neutral-white: hsl(0, 100%, 100%);

    /* spacing */
    --spacing: 1em;

    /* rounded corners */
    --rounded-corners: .5em;
}

body {
    background-color: var(--neutral-grey-50);
    display: grid;
    place-content: center;
    min-height: 100vh;
    font-family: Rubik;
}

button {
    background-color: transparent;
    border: none;
    display: inline-flex;
    gap: .5em;
    font: inherit;
    cursor: pointer;
}

.App {
    width: 768px;
    max-width: 100%;
}

/* Comment Component */

.card {
    display: flex;
    align-items: flex-start;
    background-color: var(--neutral-white);
    padding: var(--spacing);
    margin-bottom: 1em;
    border-radius: var(--rounded-corners);
}

.card .content {
    width: 100%;
}

.actions {
    margin-left: auto;
}

.actions button {
    color: var(--primary-purple-600);
    font-weight: bold;
}

.user-img {
    width: 3em;
    height: 3em;
}

.user-img img {
    display: block;
    object-fit: cover;
    max-width: 100%;
}

span.comment-date {
    color: var(--neutral-grey-500);
}

.score-component {
    background-color: var(--neutral-grey-50);
    margin-right: 1em;
    padding: .5em;
    text-align: center;
    border-radius: .5em;
    font-weight: bold;
    font-size: 1em;
    color: var(--primary-purple-600);
}

.score-component span {
    display: block;
    margin: 0;
}

.profile-header, .user {
    display: flex;
    gap: 1em;
    align-items: center;
}

.replies-list {
    margin-left: 4em;
}

.score-component button {
    margin-block: .5em;
}

/* Reply Component */

.card .replying-to {
    color: var(--primary-purple-600);
    font-weight: bold;
}

.replies-list:has(.reply) {
    position: relative;
}

.replies-list:has(.reply)::before {
    content: '';
    display: block;
    position: absolute;
    left: -2em;
    border-left: 1px solid var(--neutral-grey-100);
    height: 100%;
}

/* Form Component */

.form-component {
    background-color: var(--neutral-white);
    display: flex;
    padding: var(--spacing);
    border-radius: var(--rounded-corners);
    align-items: flex-start;
}

.comment-wrapper .form-component {
    margin-top: -2em;
    margin-bottom: 1em;
    border-top-left-radius: 0;
    border-top-right-radius: 0;
    border-top: 1px solid var(--neutral-grey-100);
}

.form-component form {
    display: flex;
    align-items: flex-start;
    justify-content: space-between;
    width: 100%;
}

.form-component textarea {
    outline: none;
    border: none;
    font: inherit;
    padding-top: 1em;
    padding-inline: 1em;
    padding-bottom: 2em;
    margin-inline: 1em;
    border: 1px solid var(--neutral-grey-100);
    border-radius: .5em;
    width: 100%;
    color: var(--neutral-grey-500);
}

.form-component button {
    background-color: var(--primary-purple-600);
    color: white;
    padding: .5em 1em;
    border-radius: .5em;
    text-transform: uppercase;
}

